--- a/index.html
+++ b/index.html
@@ -3,80 +3,53 @@
     <head>
 	      <title>Mon CV personalisé</title>
 	      <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="CV.css">
+        <link rel="stylesheet" type="text/css" href="VCard.css">
     </head>
     <body>
         <div class="page">
             <div class="infophoto">
             <div class="info">
-            <p><strong>Marique Geoffrey</strong></br>
-            Né le 09/11/1990</p>
-            <p>50 Rue Max Roos 1030 Bruxelles</br>
-            +32 488 443 332</p>
-            <p>Permis b (provisoire)</p>
+            <p></br><strong>Marique Geoffrey</strong></p>
+            <p></br><strong>Web Developer</strong></p>
             </div>
             <div class="photo">
             <img src="photocv.jpg" width="200" height="150" alt="Photo Marique Geoffrey"/>
             </div>
             </div>
             <div class="Section">
-            <h2>Formation</h2>
+            <h2>Contacts</h2>
             <div class="sec-gauche" id="format-gauche">
-            <p>xxxx-xxxx</p>
-            <p>xxxx-xxxx</p>
-            <p>xxxx-xxxx</p>
+            <p>Gsm : </p>
+            <p>E-mail : </p>
+            <p>FaceBook : </p>
             </div>
             <div class="sec-droite">
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
+            <p></br><span class="titre">0488/332/443</span></p>
+            <p><span class="titre"><a href="mailto:mari.geof.1@hotmail.com"> mari.geof.1@hotmail.com </a></span></p>
+            <p><span class="titre">En construction</span></p>
             </div>
             </br>
             <div class="Section">
-            <h2>Expériences proféssionneles</h2>
+            <h2>Formation</h2>
             <div class="sec-gauche">
-            <p>xxxx-xxxx</p>
-            <p>xxxx-xxxx</br><span class="duree">(x)</span></p>
-            <p>xxxx-xxxx</br><span class="duree">(x)</span></p>
-            <p>xxxx-xxxx</br><span class="duree">(x)</span></p>
+            <p>2017 : </p>
             </div>
             <div class="sec-droite">
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
+            <p><span class="titre">Formation BeCode de 6 mois + 1 mois de stage en programation</span></br>( full stack developer :p )</p>
             </div>
             </br>
             <div class="Section">
-            <h2>Langues parlées et autres compétences</h2>
-            <div class="sec-gauche">
-            <p>Francais : </br>
-            Néerlandais : </br>
-            Anglais : </p>
-            <p>Informatique : </p>
+            <h2>Porte-folio</h2>
+            <div class="sec-gauche" id="format-gauche">
+            <p>Mon CV : </p>
+            <p>Ma VCard : </p>
+            <p>Ma page404 : </p>
             </div>
             <div class="sec-droite">
-            <p></br>
-            yyyy</br>
-            yyyy</br>
-            yyyy</p>
-            <p></br>
-            yyyy</p>
+            <p></br><span class="titre"><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></span></p>
+            <p><span class="titre"><a href="https://creageo.github.io/VCard/"> https://creageo.github.io/VCard/ </a></span></p>
+            <p><span class="titre"><a href="https://creageo.github.io/page404/"> https://creageo.github.io/page404/ </a></span></p>
             </div>
-            </br>
-            <div class="Section">
-            <h2>Autres expériences et centres d'intêret</h2>
-            <div class="sec-gauche">
-            <p>xxxx-xxxx</p>
-            <p>xxxx-xxxx</br><span class="duree">(x)</span></p>
-            <p>Intêrets : </p>
-            </div>
-            <div class="sec-droite">
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
-            <p><span class="titre">yyyy</span></br>yyyy</p>
                 </div>
             </div>
         </div>
