--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	      <title>Mon CV personalisé</title>
 	      <meta charset="utf-8"/>
-        <link rel="stylesheet" type="text/css" href="VCard.css">
+        <link rel="stylesheet" type="text/css" href="CV.css">
     </head>
     <body>
         <div class="page">
