--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>E-mail : </p>
             <p>FaceBook : </p>
             </div>
-            <div class="sec-droite">
+            <div class="sec-droite" id="format-gauche">
             <p></br><span class="titre">0488/332/443</span></p>
             <p><span class="titre"><a href="mailto:mari.geof.1@hotmail.com"> mari.geof.1@hotmail.com </a></span></p>
             <p><span class="titre">En construction</span></p>
@@ -34,7 +34,7 @@
             <div class="sec-gauche">
             <p>2017 : </p>
             </div>
-            <div class="sec-droite">
+            <div class="sec-droite" id="format-gauche">
             <p><span class="titre">Formation BeCode de 6 mois + 1 mois de stage en programation</span></br>( full stack developer :p )</p>
             </div>
             </br>
@@ -45,7 +45,7 @@
             <p>Ma VCard : </p>
             <p>Ma page404 : </p>
             </div>
-            <div class="sec-droite">
+            <div class="sec-droite" id="format-gauche">
             <p></br><span class="titre"><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></span></p>
             <p><span class="titre"><a href="https://creageo.github.io/VCard/"> https://creageo.github.io/VCard/ </a></span></p>
             <p><span class="titre"><a href="https://creageo.github.io/page404/"> https://creageo.github.io/page404/ </a></span></p>
