--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>FaceBook : </p>
             </div>
             <div class="sec-droite" id="format-gauche">
-            <p></br><span class="titre">0488/332/443</span></p>
+            <p><span class="titre">0488/332/443</span></p>
             <p><span class="titre"><a href="mailto:mari.geof.1@hotmail.com"> mari.geof.1@hotmail.com </a></span></p>
             <p><span class="titre">En construction</span></p>
             </div>
@@ -46,7 +46,7 @@
             <p>Ma page404 : </p>
             </div>
             <div class="sec-droite" id="format-gauche">
-            <p></br><span class="titre"><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></span></p>
+            <p><span class="titre"><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></span></p>
             <p><span class="titre"><a href="https://creageo.github.io/VCard/"> https://creageo.github.io/VCard/ </a></span></p>
             <p><span class="titre"><a href="https://creageo.github.io/page404/"> https://creageo.github.io/page404/ </a></span></p>
             </div>
