--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <p>FaceBook : </p>
             </div>
             <div class="sec-droite" id="format-gauche">
-            <p><span class="titre">0488/332/443</span></p>
-            <p><span class="titre"><a href="mailto:mari.geof.1@hotmail.com"> mari.geof.1@hotmail.com </a></span></p>
-            <p><span class="titre">En construction</span></p>
+            <p>0488/332/443</p>
+            <p><a href="mailto:mari.geof.1@hotmail.com"> mari.geof.1@hotmail.com </a></p>
+            <p>En construction</p>
             </div>
             </br>
             <div class="Section">
@@ -35,7 +35,7 @@
             <p>2017 : </p>
             </div>
             <div class="sec-droite" id="format-gauche">
-            <p><span class="titre">Formation BeCode de 6 mois + 1 mois de stage en programation</span></br>( full stack developer :p )</p>
+            <p>Formation BeCode de 6 mois + 1 mois de stage en programation</br>( full stack developer :p )</p>
             </div>
             </br>
             <div class="Section">
@@ -46,9 +46,9 @@
             <p>Ma page404 : </p>
             </div>
             <div class="sec-droite" id="format-gauche">
-            <p><span class="titre"><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></span></p>
-            <p><span class="titre"><a href="https://creageo.github.io/VCard/"> https://creageo.github.io/VCard/ </a></span></p>
-            <p><span class="titre"><a href="https://creageo.github.io/page404/"> https://creageo.github.io/page404/ </a></span></p>
+            <p><a href="https://creageo.github.io/cv/">https://creageo.github.io/cv/ </a></p>
+            <p><a href="https://creageo.github.io/VCard/"> https://creageo.github.io/VCard/ </a></p>
+            <p><a href="https://creageo.github.io/page404/"> https://creageo.github.io/page404/ </a></p>
             </div>
                 </div>
             </div>
